fix(nav): full width links & close nested lists on mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -432,7 +432,7 @@ h5,
 }
 
 .nav__list-nested__item a {
-  text-wrap: nowrap;
+  white-space: nowrap;
   width: max-content;
 }
 
